<resources>
    <string name="app_name">RelativeLayout_exercise</string>
    <string name="ben">Ben</string>
    <string name="kunal">Kunal</string>
    <string name="Lyla">Lyla</string>
    <string name="Natalie">Natalie</string>
    <string name="me">me</string>
    <string name="Jennie">Jennie</string>
    <string name="omoju">Omoju</string>
    <string name="Amy">Amy</string>
    <string name="kagure">Kagure</string>
</resources>
